--- a/index.html
+++ b/index.html
@@ -55,8 +55,6 @@ title: Tidd Financial
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a lacus ac enim porttitor ultricies. Pellentesque tincidunt, ante sit amet varius pulvinar, urna sapien congue dolor, sit amet faucibus libero justo eget quam. </p>
 
                 <p>Donec molestie urna vitae rutrum malesuada. Aliquam hendrerit tincidunt tellus, sit amet lobortis nulla scelerisque sed. </p>
-
-                <p>Curabitur sed quam vehicula, varius eros sed, consequat diam. Aenean tincidunt lacus mauris, id tristique quam feugiat quis. Nulla placerat dolor eget dolor iaculis aliquet. Duis et accumsan metus.</p>
             </div>
 
             <div class="about-me__contact-info">
@@ -82,7 +80,7 @@ title: Tidd Financial
 
                 <div class="contact-info__item">
                     <div class="contact-info__item-icon">
-                        <i class="fa fa-fax" aria-hidden="true"></i>
+                        <i class="fa fa-envelope" aria-hidden="true"></i>
                     </div>
                     <div class="contact-info__item-number">
                         Email: <br>
