mobile layout and js

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ title: Tidd Financial
 ---
 
 <section class="services">
+    <a id="services"></a>
     <div class="container">
 
         <div class="service-item">
@@ -44,12 +45,12 @@ title: Tidd Financial
     </div>
 </section>
 
-<section class="about-me clearfix">
+<section class="about-us clearfix">
+    <a id="about"></a>
+        <div class="about-us__photo"></div>
 
-        <div class="about-me__photo"></div>
-
-        <div class="about-me__description">
-            <div class="about-me__description-content">
+        <div class="about-us__description">
+            <div class="about-us__description-content">
                 <h3>Terry Tidd</h3>
                 <h4 class="em">President</h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a lacus ac enim porttitor ultricies. Pellentesque tincidunt, ante sit amet varius pulvinar, urna sapien congue dolor, sit amet faucibus libero justo eget quam. </p>
@@ -57,7 +58,8 @@ title: Tidd Financial
                 <p>Donec molestie urna vitae rutrum malesuada. Aliquam hendrerit tincidunt tellus, sit amet lobortis nulla scelerisque sed. </p>
             </div>
 
-            <div class="about-me__contact-info">
+            <a id="contact"></a>
+            <div class="about-us__contact-info">
                 <div class="contact-info__item">
                     <div class="contact-info__item-icon">
                         <i class="fa fa-phone" aria-hidden="true"></i>
