content updates and minor tweaks

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@ title: Tidd Financial
                 <i class="fa fa-university" aria-hidden="true"></i>
             </div>
             <div class="service-item__title">
-                Service 1
+                Social Security
             </div>
             <div class="service-item__description">
-                <p>Donec molestie urna vitae rutrum malesuada.</p>
+                <p>Knowledge to guide you through the complex decisions you'll face.</p>
             </div>
         </div>
 
@@ -24,10 +24,10 @@ title: Tidd Financial
                 <i class="fa fa-heartbeat" aria-hidden="true"></i>
             </div>
             <div class="service-item__title">
-                Service 2
+                Medicare
             </div>
             <div class="service-item__description">
-                <p>Donec molestie urna vitae rutrum malesuada.</p>
+                <p>Experience to guide you through selecting the best Medicare HMOs, Medicare PPOs, and Medicare part D plans for your needs.</p>
             </div>
         </div>
 
@@ -36,10 +36,10 @@ title: Tidd Financial
                 <i class="fa fa-puzzle-piece" aria-hidden="true"></i>
             </div>
             <div class="service-item__title">
-                Service 3
+                Retirement
             </div>
             <div class="service-item__description">
-                <p>Donec molestie urna vitae rutrum malesuada.</p>
+                <p>Here to assist in planning your financial future and your retirement income needs.</p>
             </div>
         </div>
     </div>
@@ -53,9 +53,25 @@ title: Tidd Financial
             <div class="about-us__description-content">
                 <h3>Terry Tidd</h3>
                 <h4 class="em">President</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec a lacus ac enim porttitor ultricies. Pellentesque tincidunt, ante sit amet varius pulvinar, urna sapien congue dolor, sit amet faucibus libero justo eget quam. </p>
+                <p>
+                    At <span class="company-name">Tidd Financial, Inc.</span>, we know that retirement can
+                    seem like a puzzle with missing pieces.
+                </p>
 
-                <p>Donec molestie urna vitae rutrum malesuada. Aliquam hendrerit tincidunt tellus, sit amet lobortis nulla scelerisque sed. </p>
+                <p> We strive to provide impartial and relibable services to
+                    people looking to plan their best future possible.
+                </p>
+
+                <p>
+                    We work closley with you to find the products and services
+                    that best fit your needs. Together, we complete the retirement
+                    puzzle.
+                </p>
+
+                <p>
+                    Contact us today to get started on your future.
+                </p>
+
             </div>
 
             <a id="contact"></a>
