--- a/404.html
+++ b/404.html
@@ -1,10 +1,12 @@
 ---
 layout: default
-title: 404 - Jacob Berthelsen
+title: 404 - Tidd Financial
 permalink: /404.html
 ---
-<div class="four-oh-four">
-	<h1>404</h1>
-	<h2>Sorry, Jacob can't be found here.</h2>
-	<p>Maybe try looking at <a href="/">home</a> or on the socials below.</p>
-</div>
+<section class="four-o-four">
+    <div class="container">
+		<h1>404</h1>
+		<h2>Sorry, that page is not available.</h2>
+		<p>Maybe try looking at <a href="/">home</a>?</p>
+	</div>
+</section>
