spelling, ipsum, and menu toggle bug

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ title: Tidd Financial
                     seem like a puzzle with missing pieces.
                 </p>
 
-                <p> We strive to provide impartial and relibable services to
+                <p> We strive to provide impartial and reliable services to
                     people looking to plan their best future possible.
                 </p>
 
