updates the read me and content updates

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Tidd Financial
 ---
 
-<section class="services">
+<section class="services four-column">
     <a id="services"></a>
     <div class="container">
 
@@ -23,90 +23,203 @@ title: Tidd Financial
             <div class="service-item__icon">
                 <i class="fa fa-heartbeat" aria-hidden="true"></i>
             </div>
-            <div class="service-item__title">
+            <h3 class="service-item__title">
                 Medicare
-            </div>
-            <div class="service-item__description">
-                <p>Experience to guide you through selecting the best Medicare HMOs, Medicare PPOs, and Medicare part D plans for your needs.</p>
-            </div>
+            </h3>
+            <p class="service-item__description">
+                Experience to guide you through selecting the best Medicare HMOs, Medicare PPOs, and Medicare part D plans for your needs.
+            </p>
         </div>
 
         <div class="service-item">
             <div class="service-item__icon">
                 <i class="fa fa-puzzle-piece" aria-hidden="true"></i>
             </div>
-            <div class="service-item__title">
+            <h3 class="service-item__title">
                 Retirement
+            </h3>
+            <p class="service-item__description">
+                Here to assist in planning your financial future and your retirement income needs.
+            </p>
+        </div>
+
+        <div class="service-item">
+            <div class="service-item__icon">
+                <i class="fa fa-money" aria-hidden="true"></i>
             </div>
-            <div class="service-item__description">
-                <p>Here to assist in planning your financial future and your retirement income needs.</p>
+            <h3 class="service-item__title">
+                Business Tax Incentives
+            </h3>
+            <p class="service-item__description">
+                Working hard to take advantage of items your business is eligible for and could benefit from.
+            </p>
+        </div>
+    </div>
+</section>
+
+<section class="retirement">
+    <a id="retirement"></a>
+    <div class="container">
+        <h2 class="section-title">Retirement programs for business owners</h2>
+        <p>Here at Stryde, we work with many businesses to facilitate individualized, personalized and proprietary retirement programs. One of the more powerful approaches we use is a front loaded retirement program, called the Stryde Retirement Program (SRP), created by Stryde.</p>
+        <p>While there are many nuances to the methodologies behind the working parts of this structure, the SRP is simply a tool through which a business owner may have the ability to drastically advance their wealth accumulation relative to their retirement planning efforts in a highly tax advantaged manner. This methodology, when applicable, gives business owners the opportunity to take a tax deduction relative to their participation, grow their wealth tax deferred and take distributions out of this retirement planning medium tax free.</p>
+        <p>Additionally, it jump starts their retirement by advancing massive amounts of capital in their program for them, with the goal of realizing superior gains as a result of having more money working for them. This lends itself to having the ability to generate a much larger nest egg than through other approaches that may then be distributed on a tax free basis.</p>
+        <ul class="column-cards">
+            <li> <h4>Wealth Transfer:</h4>Transfer massive amounts of wealth to your heirs, charity, school or foundation utilizing the most powerful and cost effective manner while guaranteeing the results </li>
+            <li> <h4>Estate Plan:</h4>Engage in estate planning utilizing the benefits of your business to accomplish the most cost effective ILIT in existence </li>
+            <li> <h4>Qualified Plan Rescue:</h4>By redirecting participating funds, the opportunity exists to generate a structure that results in tax free distributions that may be applied against taxes due on distributions out of a qualified plan </li>
+            <li> <h4>Business Exit Planning:</h4>With the ability of the front loading to be assumed, it may provide massive benefit to the business seller and buyer at sale </li>
+            <li> <h4>Key-man & Buy/Sell:</h4>With the insurance contained within the structure, it can be used as a wealth accumulation medium and address insurance needs simultaneously</li>
+        </ul>
+    </div>
+</section>
+
+<section class="services">
+    <a id="keys"></a>
+    <div class="container">
+        <h2 class="section-title">5 key ways to help business owners</h2>
+
+        <div class="service-item">
+            <div class="service-item__icon">
+                <i class="fa fa-lock" aria-hidden="true"></i>
             </div>
+            <h3 class="service-item__title">
+                Specialized tax incentives
+            </h3>
+            <p class="service-item__description">
+                Our Proprietary App has helped agents deliver over $300M in Local, State, and Federal Tax Incentives to their clients. Our Industry Experts work with your clients to discover which incentives they are eligible for. Fees are based on a percentage of savings.
+            </p>
+        </div>
+
+        <div class="service-item">
+            <div class="service-item__icon">
+                <i class="fa fa-credit-card" aria-hidden="true"></i>
+            </div>
+            <h3 class="service-item__title">
+                Credit card merchant audit
+            </h3>
+            <p class="service-item__description">
+                Our Credit Card Merchant audit helps organizations reduce payment processing expenses. Our proprietary tools audit and analyze credit card processing and provide transparency to merchant fees and statements. Fees are based only on a percentage of savings.
+            </p>
+        </div>
+
+        <div class="service-item">
+            <div class="service-item__icon">
+                <i class="fa fa-trash-o" aria-hidden="true"></i>
+            </div>
+            <h3 class="service-item__title">
+                Waste and recycling audit
+            </h3>
+            <p class="service-item__description">
+                Our analysis includes finding loopholes by conducting a thorough review of your property, past invoices and pricing schedule. Whether the property is located in a city with set pricing or an open market, we know what it takes to uncover big savings.
+            </p>
+        </div>
+
+        <div class="service-item">
+            <div class="service-item__icon">
+                <i class="fa fa-users" aria-hidden="true"></i>
+            </div>
+            <h3 class="service-item__title">
+                Work comp insurance audit
+            </h3>
+            <p class="service-item__description">
+                70% of all employers have overpaid on their Workers' Compensation premium costs. Our team performs a review to determine if there is a significant opportunity for a lower rated classification as they are typically determined by insurance company underwriters.
+            </p>
+        </div>
+
+        <div class="service-item">
+            <div class="service-item__icon">
+                <i class="fa fa-truck" aria-hidden="true"></i>
+            </div>
+            <h3 class="service-item__title">
+                Parcel shipping expense audit
+            </h3>
+            <p class="service-item__description">
+                Our audit software automatically downloads carrier invoices and secures refunds for clients. Our processes are not intrusive. We currently have an annual audit volume of $1.6 Billion Dollars and our billing is based on a percentage of received refunds.
+            </p>
         </div>
     </div>
 </section>
 
 <section class="about-us clearfix">
     <a id="about"></a>
-        <div class="about-us__photo"></div>
+    <div class="about-us__photo"></div>
 
-        <div class="about-us__description">
-            <div class="about-us__description-content">
-                <h3>Terry Tidd</h3>
-                <h4 class="em">President</h4>
-                <p>
-                    At <span class="company-name">Tidd Financial, Inc.</span>, we know that retirement can
-                    seem like a puzzle with missing pieces.
-                </p>
+    <div class="about-us__description">
+        <div class="about-us__description-content">
+            <h3>Terry Tidd</h3>
+            <h4 class="em">President</h4>
 
-                <p> We strive to provide impartial and reliable services to
-                    people looking to plan their best future possible.
-                </p>
+            <p>
+                Terry Tidd is a Senior Advisor with Stryde Solutions. Terry Tidd and their team work with clients on a national level to identify Specialized Tax Incentives, Expense Reduction and Financial enhancement opportunities.
+            </p>
 
-                <p>
-                    We work closley with you to find the products and services
-                    that best fit your needs. Together, we complete the retirement
-                    puzzle.
-                </p>
+            <p>
+                At <span class="company-name">Tidd Financial, Inc.</span>, we know that retirement can
+                seem like a puzzle with missing pieces.
+            </p>
 
-                <p>
-                    Contact us today to get started on your future.
-                </p>
+            <p> We strive to provide impartial and reliable services to
+                people looking to plan their best future possible.
+            </p>
 
+            <p>
+                We work closely with you to find the products and services
+                that best fit your needs. Together, we complete the retirement
+                puzzle.
+            </p>
+
+            <p>
+                Contact us today to get started on your future.
+            </p>
+
+        </div>
+
+        <a id="contact"></a>
+        <div class="about-us__contact-info">
+            <div class="contact-info__item">
+                <div class="contact-info__item-icon">
+                    <i class="fa fa-phone" aria-hidden="true"></i>
+                </div>
+                <div class="contact-info__item-number">
+                    Phone: <br>
+                    785-760-5400
+                </div>
             </div>
 
-            <a id="contact"></a>
-            <div class="about-us__contact-info">
-                <div class="contact-info__item">
-                    <div class="contact-info__item-icon">
-                        <i class="fa fa-phone" aria-hidden="true"></i>
-                    </div>
-                    <div class="contact-info__item-number">
-                        Phone: <br>
-                        785-760-5400
-                    </div>
+            <div class="contact-info__item">
+                <div class="contact-info__item-icon">
+                    <i class="fa fa-fax" aria-hidden="true"></i>
                 </div>
-
-                <div class="contact-info__item">
-                    <div class="contact-info__item-icon">
-                        <i class="fa fa-fax" aria-hidden="true"></i>
-                    </div>
-                    <div class="contact-info__item-number">
-                        Fax: <br>
-                        785-893-6469
-                    </div>
+                <div class="contact-info__item-number">
+                    Fax: <br>
+                    785-893-6469
                 </div>
+            </div>
 
-                <div class="contact-info__item">
-                    <div class="contact-info__item-icon">
-                        <i class="fa fa-envelope" aria-hidden="true"></i>
-                    </div>
-                    <div class="contact-info__item-number">
-                        Email: <br>
-                        <a href="mailto:tiddfinancial@hotmail.com">
-                            tiddfinancial@hotmail.com
-                        </a>
-                    </div>
+            <div class="contact-info__item">
+                <div class="contact-info__item-icon">
+                    <i class="fa fa-envelope" aria-hidden="true"></i>
+                </div>
+                <div class="contact-info__item-number">
+                    Email: <br>
+                    <a href="mailto:tiddfinancial@hotmail.com">
+                        tiddfinancial@hotmail.com
+                    </a>
+                </div>
+            </div>
+
+            <div class="contact-info__item">
+                <div class="contact-info__item-icon">
+                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                </div>
+                <div class="contact-info__item-number">
+                    Profile: <br>
+                    <a href="http://www.strydeadvisors.com/information/stryde.cfm?page=services&id=281120" target="_blank">
+                        Stryde Solutions
+                    </a>
                 </div>
             </div>
         </div>
+    </div>
 </section>
